# Portfolio-RAG-API

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json  render.yaml  start.py  validate_setup.py
app/: main.py
app/api/: routes.py
app/controllers/: document_controller.py  health_controller.py  query_controller.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/routes/: routes.py
app/services/: document_processor.py  vector_store.py
data/documents/: sample_resume.txt
scripts/: dev.sh
